# usbrelay-ros2

./: .gitignore  Dockerfile  README.md  start_docker.sh
src/usbrelay/: CMakeLists.txt  package.xml
src/usbrelay/src/: libusbrelay.c  libusbrelay.h  usbrelay.cpp  usbrelay_test.cpp  utils.h
src/usbrelay_interfaces/: CMakeLists.txt  package.xml
src/usbrelay_interfaces/srv/: GetRelay.srv  SetRelay.srv
